reduce calls of PsiElement#getText() to improve overall performance